--- a/public/bandersnatch/index.html
+++ b/public/bandersnatch/index.html
@@ -14,11 +14,14 @@
         poster="./lib/img/jsexpert.png"
         src="./video.mp4"
         controls
-        preload="none"
+        preload="none" 
       ></video>
     </div>
     <script src="./lib/js/jquery.min.js"></script>
     <script src="./lib/js/video.js"></script>
+    <script src="./src/videoComponent.js"></script>
+    <script src="./src/network.js"></script>
+    <script src="./src/videoPlayer.js"></script>
     <script src="./index.js"></script>
    
   </body>
